<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="setting">설정</string>
    <string name="customer_service">고객센터</string>
    <string name="logout">로그아웃</string>
    <string name="withdraw">회원탈퇴</string>
    <string name="block_members">차단된 계정</string>
    <string name="terms">이용약관</string>
    <string name="privacy">개인정보 처리방침</string>
    <string name="version_info">버전정보</string>
    <string name="notification_setting">알림 설정</string>
    <string name="notification">알림</string>
    <string name="exercise_notification">운동 독려 알림</string>
    <string name="chatting_notification">채팅 알림</string>

    <string name="alert_logout">정말 로그아웃 하시겠어요?</string>
    <string name="logout_error">로그아웃 중 오류가 발생했습니다</string>

    <string name="withdraw_url">https://forms.gle/eiZW3iLYnsKjdPVr7</string>
    <string name="customer_service_url">https://forms.gle/8b3kGK34PBfySBxm7</string>

    <string name="nickname">닉네임</string>
    <string name="gender_birth_format">%s | %s</string>
    <string name="mypage_male">남자</string>
    <string name="mypage_female">여자</string>
    <string name="unknown_gender">공개안함</string>
    <string name="recent_exercise_counts">최근 30일 운동 횟수</string>
    <string name="current_year_exercise_days">올해 운동 일수</string>
    <string name="max_days">&#160;/ 365</string>
    <string name="exercise_score">운동 점수</string>
    <string name="empty_introduction">자기소개를 입력해서 자신에 대해 알려주세요!</string>

    <string name="preferred_exercise">선호 운동</string>
    <string name="empty_preferred_exercise">선호운동을 선택해주세요+</string>
    <string name="skill_level_0">입문자</string>
    <string name="skill_level_1">초급자</string>
    <string name="skill_level_2">중급자</string>
    <string name="skill_level_3">고급자</string>
    <string name="skill_level_4">숙련자</string>
    <string name="skill_level_5">선출</string>

    <string name="open_url_form_title">카카오 오픈 채팅</string>
    <string name="open_chat_link">오픈 채팅 링크</string>
    <string name="open_chat_announce">채팅 기능이 개발 중입니다. 카카오 오픈 채팅을 사용해주세요!</string>
    <string name="open_chat_empty">카카오 오픈 채팅 URL을 추가해 주세요 +</string>
    <string name="open_chat_url">카카오 오픈 채팅 URL</string>
    <string name="open_chat_hint">예시) https://open.kakao.com/o/undabang</string>

    <string name="how_to_create_open_url">카카오톡 오픈채팅방 만드는 법</string>
    <string name="success_to_save_url">오픈채팅 링크가 저장되었습니다.</string>
    <string name="fail_to_save_url">오픈채팅 링크 저장에 실패했습니다.</string>

    <string name="url_notice_title">등록하신 카카오 오픈채팅 URL은 다른 이용자에게 공개됩니다.</string>
    <string name="url_notice_content">회원님이 등록하는 오픈채팅 URL 정보는\n운동 메이트와 연결하기 위한 목적으로 다른 이용자들에게 공개됩니다.\n&#160;&#160;•&#160;&#160;제공받는 자: 본 서비스를 이용하는 다른 모든 회원
\n&#160;&#160;•&#160;&#160;제공하는 정보: 회원님이 등록한 오픈채팅 URL 정보\n&#160;&#160;•&#160;&#160;보유 및 이용 기간: 회원 탈퇴 또는 해당 URL 정보 삭제 시까지</string>

    <string name="open_chat_type">https://open.kakao.com/o/</string>
    <string name="open_chat_invalid">유효한 오픈채팅 URL이 아닙니다.</string>


    <!-- 프로필 수정 -->
    <string name="profile_edit">프로필 수정</string>
    <string name="profile_edit_nickname_rule">•&#160;&#160;영어, 한글, 숫자 포함 30자 이내\n•&#160;&#160;태그, 이모지 및 특수 문자 불가능</string>
    <string name="profile_edit_male">남</string>
    <string name="profile_edit_female">여</string>
    <string name="profile_edit_hidden">공개 안함</string>
    <string name="profile_edit_duplicate_check">중복 확인</string>
    <string name="profile_edit_introduction">자기 소개</string>
    <string name="error_nickname_duplicated">이미 사용 중인 닉네임입니다.</string>
    <string name="same_nickname">기존 닉네임과 같습니다.</string>
    <string name="usable_nickname">사용 가능한 닉네임입니다.</string>
    <string name="error_nickname_invalid">닉네임 조건을 확인해주세요.</string>
    <string name="error_no_changed">변경사항이 없습니다.</string>
    <string name="error_no_duplicate_checked">닉네임 중복 확인을 해주세요.</string>
    <string name="error_edit_failed">프로필 수정에 실패했습니다.</string>
    <string name="edit_profile_success">프로필 수정이 완료됐습니다.</string>
    <string name="image_error_invalid_type">지원하지 않는 파일 형식입니다.\n(%s 형식만 가능)</string>
    <string name="image_error_file_read">파일을 읽는 데 실패했습니다. 다른 파일을 선택해 주세요.</string>
    <string name="error_unknown">알 수 없는 오류가 발생했습니다.</string>

    <string name="error_failed_to_load">마이페이지 정보를 불러오는데 실패했습니다.</string>

    <string name="profile_image_detail_divider">/</string>
    <string name="number_format">%d</string>
    <string name="change_thumbnail">대표 사진으로 지정</string>
    <string name="save_profile_image">저장하기</string>
    <string name="delete_profile_image">삭제</string>
    <string name="error_faild_to_load_profile_image">이미지를 불러오는데 실패했습니다.</string>
    <string name="error_faild_to_delete_profile_image">이미지를 삭제에 실패했습니다.</string>
    <string name="error_faild_to_change_thumbnail">대표 이미지 변경에 실패했습니다.</string>
    <string name="change_thumbnail_failed">대표 이미지 변경에 실패했습니다.</string>
    <string name="image_save_success">갤러리에 이미지를 저장했습니다.</string>
    <string name="image_save_failed">이미지 저장에 실패했습니다.</string>
    <string name="cannot_save_default_image">기본 이미지는 저장할 수 없습니다.</string>
    <string name="cannot_change_thumbnail">이미 대표 이미지입니다.</string>
    <string name="error_failed_">기본 이미지는 저장할 수 없습니다.</string>
    <string name="change_thumbnail_success">대표 이미지를 변경했습니다.</string>
    <string name="image_delete_success">이미지를 삭제했습니다.</string>

    <!-- 알림 -->
    <string name="noti_active">알림이 활성화되었습니다.</string>
    <string name="noti_permission_announce">알림을 받으려면 앱 설정에서 권한을 허용해주세요.</string>
    <string name="noti_deactive">알림이 비활성화되었습니다.</string>
    
    <string name="unblock">차단 해제</string>
    <string name="block_members_empty">아직 차단된 계정이 없어요</string>

    <!-- 선호 운동 설정 -->
    <string name="preferred_exercise_type_title">%s님, 선호하시는 운동을 선택해 주세요.</string>
    <string name="preferred_exercise_type_max_cnt">*선호운동은 최대 5개까지 선택 가능해요.</string>
    <string name="preferred_exercise_type_max_error">최대 5개까지 선택 가능해요</string>
    <string name="preferred_exercise_detail_days_title">운동 주기</string>
    <string name="preferred_exercise_detail_days_skill_level">숙련도</string>
    <string name="preferred_exercise_day_not_selected">요일 미선택</string>
    <string name="preferred_exercise_skill_not_selected">숙련도 미선택</string>
    <string name="skill_novice">입문</string>
    <string name="skill_beginner">초급</string>
    <string name="skill_intermediate">중급</string>
    <string name="skill_advanced">고급</string>
    <string name="skill_expert">숙련</string>
    <string name="skill_professional">선출</string>
    <string name="preferred_exercise_none_selected">최소 하나의 운동을 선택해주세요</string>
    <string name="preferred_exercise_incomplete_seleted">요일과 숙련도를 모두 선택해주세요</string>
    <string name="preferred_exercise_no_changed">변경사항이 없습니다</string>
    <string name="preferred_exercise_success">선호 운동이 저장되었습니다</string>
</resources>