<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white300"
    android:orientation="vertical">

    <com.project200.presentation.base.BaseToolbar
        android:id="@+id/base_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        style="@style/content_bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/base_horizontal_margin"
        android:layout_marginTop="30dp"
        android:text="@string/open_chat_url" />

    <EditText
        style="@style/subtext_14"
        android:id="@+id/url_et"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="@dimen/base_horizontal_margin"
        android:layout_marginTop="8dp"
        android:background="@drawable/bg_solid_corner"
        android:hint="@string/open_chat_hint"
        android:paddingHorizontal="12dp"
        android:textColorHint="@color/gray200" />

    <TextView
        style="@style/content_bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/base_horizontal_margin"
        android:layout_marginTop="@dimen/base_horizontal_margin"
        android:text="@string/how_to_create_open_url"
        android:textSize="14sp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/base_horizontal_margin"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="80dp"
        android:src="@drawable/ic_url_guide" />

    <TextView
        style="@style/content_bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/base_horizontal_margin"
        android:layout_marginTop="30dp"
        android:drawablePadding="6dp"
        android:text="@string/url_notice_title"
        android:textColor="@color/gray200"
        android:textSize="12sp"
        app:drawableStartCompat="@drawable/ic_warning" />

    <TextView
        style="@style/subtext_12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/base_horizontal_margin"
        android:layout_marginTop="12dp"
        android:text="@string/url_notice_content"
        android:textColor="@color/gray200"
        android:textSize="12sp"
        android:layout_marginBottom="40dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/confirm_btn"
        style="@style/content_bold"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_gravity="bottom"
        android:layout_marginHorizontal="@dimen/base_horizontal_margin"
        android:layout_marginBottom="40dp"
        android:background="@drawable/basic_activate_btn"
        android:gravity="center"
        android:text="@string/complete"
        android:textColor="@color/white300" />

</LinearLayout>